--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@mantine/carousel": "^7.14.2",
     "@mantine/core": "^7.14.2",
+    "@mantine/dates": "^7.14.3",
     "@mantine/hooks": "^7.14.2",
     "@mantine/tiptap": "^7.14.2",
     "@tabler/icons-react": "^3.22.0",
@@ -25,6 +26,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "dayjs": "^1.11.13",
     "dompurify": "^3.2.1",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
