--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/hooks": "^7.14.2",
     "@mantine/notifications": "^7.14.3",
     "@mantine/tiptap": "^7.14.2",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tabler/icons-react": "^3.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -34,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
